[wheel]
universal = 1

[metadata]
license_file = LICENSE

[coverage:run]
omit = paramiko/_winapi.py

[flake8]
exclude = sites,.git,build,dist,demos
ignore = E124,E125,E128,E261,E301,E302,E303,E402,E721,W503,E203,E722
max-line-length = 79

[tool:pytest]
addopts = -p no:relaxed
looponfailroots = tests paramiko
filterwarnings = 
	ignore::DeprecationWarning:pkg_resources
	ignore::cryptography.utils.CryptographyDeprecationWarning

[egg_info]
tag_build = 
tag_date = 0

